# Library-Management-System-CPPVersion

./: CMakeLists.txt  README.md  biblioteca.txt  main.cpp
AppNagy/: Nagy.cpp  Nagy.h
AppUntaru/: Untaru.cpp  Untaru.h
Functionalitati/: Carte.cpp  Carte.h  Librarie.cpp  Librarie.h
